# linux

./: .gitignore
example0/: CMakeLists.txt  main.c
example1/: CMakeLists.txt  a.sh  main.cpp  make_project.sh
